--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.3",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "stripe": "^12.12.0"
   }
 }
