--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
+    "node": "^20.4.0",
     "stripe": "^12.12.0"
   }
 }
